# canva-site-ripper

./: .gitignore  README.md  pyproject.toml
src/canva-site-ripper/: clean.py
src/canva_site_ripper/: clean.py  rip.py
