[tool.poetry]
name = "canva-site-ripper"
version = "0.1.0"
description = "Tool to rip Canva websites, cleaning them in the process"
authors = ["Hayden Lau"]
license = "MIT"
readme = "README.md"
packages = [{include = "canva_site_ripper"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
