[tool.poetry]
name = "canva-site-ripper"
version = "0.1.0"
description = "Tool to rip Canva websites, cleaning them in the process"
authors = ["Hayden Lau"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
canva-site-ripper = "canva_site_ripper.rip:main"

[tool.black]
line-length = 100

[tool.pylint.main]
disable=["fixme", "too-many-instance-attributes", "too-many-locals", "too-many-arguments"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
